@@ -24,6 +24,7 @@ import com.intellij.psi.codeStyle.JavaCodeStyleManager;
 import com.intellij.psi.codeStyle.VariableKind;
 import com.intellij.psi.search.searches.ReferencesSearch;
 import com.intellij.psi.util.PsiTreeUtil;
+import com.intellij.psi.util.PsiUtil;
 import com.intellij.util.ObjectUtils;
 import com.siyeh.ig.callMatcher.CallMatcher;
 import com.siyeh.ig.psiutils.*;
@@ -77,7 +78,7 @@ public final class Java8MapApiInspection extends AbstractBaseJavaLocalInspection
       checkbox("mySideEffects", JavaBundle.message("checkbox.suggest.replacement.even.if.lambda.may.have.side.effects")));
   }
 
-    @Override
+  @Override
   public @NotNull Set<@NotNull JavaFeature> requiredFeatures() {
     return Set.of(JavaFeature.ADVANCED_COLLECTIONS_API);
   }
@@ -103,7 +104,7 @@ public final class Java8MapApiInspection extends AbstractBaseJavaLocalInspection
 
         if (references.isEmpty()) return;
 
-        PsiMethodCallExpression commonPutCall = findPutMethodParent(references.get(0).getElement());
+        PsiMethodCallExpression commonPutCall = findPutMethodParent(references.getFirst().getElement());
 
         if (commonPutCall == null || !isCommonPutCallForAllReferences(references, commonPutCall)) return;
 
@@ -175,6 +176,78 @@ public final class Java8MapApiInspection extends AbstractBaseJavaLocalInspection
         holder.registerProblem(statement.getFirstChild(),
                                QuickFixBundle.message("java.8.map.api.inspection.description", fix.myMethodName), fix);
       }
+
+      private void processComputeIfAbsentPattern(@NotNull PsiMethodCallExpression getCall) {
+        if (!mySuggestMapComputeIfAbsent) return;
+        PsiExpression getQualifier = getCall.getMethodExpression().getQualifierExpression();
+        if (getQualifier == null) return;
+        PsiStatement statement = PsiTreeUtil.getParentOfType(getCall, PsiStatement.class);
+        if (statement == null) return;
+        PsiElement prev = PsiTreeUtil.skipWhitespacesAndCommentsBackward(statement);
+        PsiIfStatement ifStmt = ObjectUtils.tryCast(prev, PsiIfStatement.class);
+        if (ifStmt == null) return;
+        PsiStatement thenBranch = ControlFlowUtils.stripBraces(ifStmt.getThenBranch());
+        PsiStatement elseBranch = ControlFlowUtils.stripBraces(ifStmt.getElseBranch());
+        if (elseBranch != null || !(thenBranch instanceof PsiExpressionStatement)) return;
+        PsiExpression rawCond = PsiUtil.skipParenthesizedExprDown(ifStmt.getCondition());
+        PsiMethodCallExpression containsOrGetNullCall = null;
+        if (rawCond instanceof PsiPrefixExpression prefix && prefix.getOperationTokenType() == JavaTokenType.EXCL) {
+          PsiExpression operand = PsiUtil.skipParenthesizedExprDown(prefix.getOperand());
+          containsOrGetNullCall = extractMapMethodCall(operand, "containsKey");
+        }
+        if (containsOrGetNullCall == null && myTreatGetNullAsContainsKey && rawCond instanceof PsiBinaryExpression binExpr) {
+          PsiExpression lOperand = PsiUtil.skipParenthesizedExprDown(binExpr.getLOperand());
+          PsiExpression rOperand = PsiUtil.skipParenthesizedExprDown(binExpr.getROperand());
+          if (lOperand == null || rOperand == null) return;
+          boolean isEqNull = binExpr.getOperationTokenType() == JavaTokenType.EQEQ;
+          PsiExpression getCandidate = extractMapMethodCall(lOperand, "get");
+          PsiExpression nullCandidate = rOperand;
+          if (getCandidate == null) {
+            getCandidate = extractMapMethodCall(rOperand, "get");
+            nullCandidate = lOperand;
+          }
+          if (getCandidate instanceof PsiMethodCallExpression getInCond && ExpressionUtils.isNullLiteral(nullCandidate) && isEqNull) {
+            containsOrGetNullCall = getInCond;
+          }
+        }
+        if (containsOrGetNullCall == null) return;
+        MapCheckCondition condition = fromConditional(ifStmt, myTreatGetNullAsContainsKey);
+        if (condition != null && condition.hasVariable()) return;
+        PsiMethodCallExpression putCall = extractMapMethodCall(((PsiExpressionStatement)thenBranch).getExpression(), "put");
+        if (putCall == null) return;
+        PsiExpression[] putArgs = putCall.getArgumentList().getExpressions();
+        if (putArgs.length != 2) return;
+        PsiExpression keyPut = putArgs[0];
+        PsiExpression valPut = putArgs[1];
+        if (NullabilityUtil.getExpressionNullability(valPut) == Nullability.NULLABLE) return;
+        if (condition != null && !condition.isMapValueType(valPut.getType())) return;
+        if (!LambdaGenerationUtil.canBeUncheckedLambda(valPut)) return;
+        EquivalenceChecker eq = getCanonicalPsiEquivalence();
+        PsiExpression keyGet = getCall.getArgumentList().getExpressions().length == 1 ? getCall.getArgumentList().getExpressions()[0] : null;
+        PsiExpression keyCond = containsOrGetNullCall.getArgumentList().getExpressions().length == 1 ? containsOrGetNullCall.getArgumentList().getExpressions()[0] : null;
+        if (keyGet == null || keyCond == null) return;
+        if (!eq.expressionsAreEquivalent(keyGet, keyPut) || !eq.expressionsAreEquivalent(keyGet, keyCond)) return;
+        PsiExpression putQualifier = putCall.getMethodExpression().getQualifierExpression();
+        PsiExpression condQualifier = containsOrGetNullCall.getMethodExpression().getQualifierExpression();
+        if (putQualifier == null || condQualifier == null) return;
+        if (!eq.expressionsAreEquivalent(getQualifier, putQualifier) || !eq.expressionsAreEquivalent(getQualifier, condQualifier)) return;
+        if (condition != null && !condition.isMap(getQualifier)) return;
+        PsiReturnStatement returnStatement = ObjectUtils.tryCast(statement, PsiReturnStatement.class);
+        if (returnStatement == null) return;
+        holder.registerProblem(getCall, QuickFixBundle.message("java.8.map.api.inspection.description", "computeIfAbsent"),
+                               ProblemHighlightType.GENERIC_ERROR_OR_WARNING,
+                               new ContainsKeyPutReturnComputeIfAbsentFix(ifStmt, returnStatement, getCall, putCall, valPut));
+      }
+
+      @Override
+      public void visitMethodCallExpression(@NotNull PsiMethodCallExpression expression) {
+        super.visitMethodCallExpression(expression);
+        PsiMethodCallExpression getCall = extractMapMethodCall(expression, "get");
+        if (getCall != null) {
+          processComputeIfAbsentPattern(getCall);
+        }
+      }
+
 
       private static PsiMethodCallExpression findPutMethodParent(PsiElement element) {
         while (element != null && !(element instanceof PsiMethod)) {
@@ -552,6 +625,73 @@ public final class Java8MapApiInspection extends AbstractBaseJavaLocalInspection
     }
   }
 
+  private static class ContainsKeyPutReturnComputeIfAbsentFix extends PsiUpdateModCommandQuickFix {
+    private final SmartPsiElementPointer<PsiIfStatement> myIfPtr;
+    private final SmartPsiElementPointer<PsiReturnStatement> myReturnPtr;
+    private final SmartPsiElementPointer<PsiMethodCallExpression> myGetPtr;
+    private final SmartPsiElementPointer<PsiMethodCallExpression> myPutPtr;
+    private final SmartPsiElementPointer<PsiExpression> myValuePtr;
+    ContainsKeyPutReturnComputeIfAbsentFix(PsiIfStatement ifStmt, PsiReturnStatement ret, PsiMethodCallExpression getCall,
+                                           PsiMethodCallExpression putCall, PsiExpression value) {
+      SmartPointerManager mgr = SmartPointerManager.getInstance(ifStmt.getProject());
+      myIfPtr = mgr.createSmartPsiElementPointer(ifStmt);
+      myReturnPtr = mgr.createSmartPsiElementPointer(ret);
+      myGetPtr = mgr.createSmartPsiElementPointer(getCall);
+      myPutPtr = mgr.createSmartPsiElementPointer(putCall);
+      myValuePtr = mgr.createSmartPsiElementPointer(value);
+    }
+    @Override
+    public @NotNull String getName() { return QuickFixBundle.message("java.8.map.api.inspection.fix.text", "computeIfAbsent"); }
+    @Override
+    public @NotNull String getFamilyName() { return QuickFixBundle.message("java.8.map.api.inspection.fix.family.name"); }
+    @Override
+    protected void applyFix(@NotNull Project project, @NotNull PsiElement element, @NotNull ModPsiUpdater updater) {
+      PsiIfStatement ifStmt = updater.getWritable(myIfPtr.getElement());
+      PsiReturnStatement ret = updater.getWritable(myReturnPtr.getElement());
+      PsiMethodCallExpression getCall = updater.getWritable(myGetPtr.getElement());
+      PsiMethodCallExpression putCall = updater.getWritable(myPutPtr.getElement());
+      PsiExpression value = updater.getWritable(myValuePtr.getElement());
+      if(ifStmt == null || ret == null || getCall == null || putCall == null || value == null) return;
+      PsiExpression mapExpr = getCall.getMethodExpression().getQualifierExpression();
+      PsiExpression keyExpr = getCall.getArgumentList().getExpressions().length == 1 ? getCall.getArgumentList().getExpressions()[0] : null;
+      if(mapExpr == null || keyExpr == null) return;
+      CommentTracker ct = new CommentTracker();
+      PsiElementFactory factory = JavaPsiFacade.getElementFactory(project);
+      String paramName = "k";
+      if(keyExpr instanceof PsiReferenceExpression ref && ref.getQualifier() == null) {
+        String candidate = getNameCandidate(ref.getReferenceName());
+        paramName = JavaCodeStyleManager.getInstance(project).suggestUniqueVariableName(candidate, ret, true);
+        PsiElement resolved = ref.resolve();
+        if(resolved != null) {
+          for(PsiReferenceExpression r : PsiTreeUtil.collectElementsOfType(value, PsiReferenceExpression.class)) {
+            if(r.getQualifierExpression() == null && r.isReferenceTo(resolved)) {
+              ExpressionUtils.bindReferenceTo(r, paramName);
+            }
+          }
+        }
+      }
+      String lambdaText = paramName + " -> " + ct.text(value);
+      String replacementText = ct.text(mapExpr) + ".computeIfAbsent(" + ct.text(keyExpr) + ", " + lambdaText + ")";
+      PsiExpression oldRetExpr = ret.getReturnValue();
+      if (oldRetExpr == null) return;
+      PsiExpression unwrappedRetExpr = PsiUtil.skipParenthesizedExprDown(oldRetExpr);
+      PsiExpression newCallExpr = factory.createExpressionFromText(replacementText, oldRetExpr);
+      if (unwrappedRetExpr != null && PsiEquivalenceUtil.areElementsEquivalent(unwrappedRetExpr, getCall)) {
+        // Simple case: `return map.get(key);` – replace the whole return value
+        ct.replace(oldRetExpr, newCallExpr);
+      }
+      else if (oldRetExpr instanceof PsiMethodCallExpression && PsiTreeUtil.isAncestor(oldRetExpr, getCall, true)) {
+        // Wrapped case: `return Optional.of(map.get(key));` – replace only the inner get() call
+        PsiExpression innerNewCall = factory.createExpressionFromText(replacementText, getCall);
+        ct.replace(getCall, innerNewCall);
+      }
+      else {
+        return;
+      }
+      ct.deleteAndRestoreComments(ifStmt);
+      CodeStyleManager.getInstance(project).reformat(ret);
+    }
+  }
   private static void register(MapCheckCondition condition, ProblemsHolder holder, boolean informationLevel, ReplaceWithSingleMapOperation fix) {
     if (informationLevel && !holder.isOnTheFly()) return;
     holder.registerProblem(condition.getFullCondition(), QuickFixBundle.message("java.8.map.api.inspection.description", fix.myMethodName),
